Changes to bibtex and references

--- a/gREM_ms_17082014.tex
+++ b/gREM_ms_17082014.tex
@@ -103,14 +103,14 @@ Sensor technology, such as camera traps \citep{rowcliffe2008surveys, karanth1995
 
 
 
-Methods do already exist for estimating animal density but these methods often require additional information that may not be available. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2003estimation, soisalo2006estimating, trolle2007camera, borchers2014} require recognition of individuals, distance methods \citep{harris2013applying} require an estimation of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. The development of the random encounter model (REM) (a modification of a gas model) enabled animal densities to be estimated from unmarked individuals of a known speed, and sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (for example acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading \citep{rowcliffe2008estimating}. 
+Methods do already exist for estimating animal density but these methods often require additional information that may not be available. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2003estimation, soisalo2006estimating, trolle2007camera, borchers2014continuous} require recognition of individuals, distance methods \citep{harris2013applying} require an estimation of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. The development of the random encounter model (REM) (a modification of a gas model) enabled animal densities to be estimated from unmarked individuals of a known speed, and sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (for example acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading \citep{rowcliffe2008estimating}. 
 
 Whilst these restrictions are not problematic for most camera trap makes (e.g. Reconyx, Cuddeback), the REM could not be used to estimate densities from camera traps with a wider sensor width (e.g. canopy monitoring with fish eye lens \citep{brusa2014increasing}). Additionally, the REM method would not be useful in estimating densities from acoustic survey data as the acoustic detector angles are often wider than $\pi/2$ radians.  Acoustic detectors are designed for a range of diverse tasks and environments \citep{kessel2014review}, which will naturally lead to a wide range of sensor detection widths and detection distances. In addition to this, calls emitted by many animals are directional \citep{blumstein2011acoustic} breaking the assumption of the REM method. 
 
 
 There has been a sharp rise in interest around passive acoustic detectors in recent years, with a 10 fold increase in publications in the decade between 2000 and 2010 \citep{kessel2014review}. Acoustic monitoring is being developed to study many aspects of ecology, including the interactions of animals and their environments \citep{blumstein2011acoustic, rogers2013density}, the presence and relative abundances of species \citep{marcoux2011local}, and biodiversity of an area \citep{depraetere2012monitoring}. 
 
-Acoustic data suffers from many of the problems associated with data from camera trap surveys in that individuals are often unmarked so capture-mark-recapture methods cannot be used to estimate densities. In some cases the distance between the animal and the sensor is known, for example when an array of sensors and the position of the animal is estimated by triangulation \citep{lewis2007sperm}. In these situations distance-sampling methods can be applied, a method typically used for marine mammals \citep{rogers2013density}. However, in many cases distance estimation is not possible, for example when single sensors are deployed, a situation typical in the majority of terrestrial acoustic surveys  \citep{elphick2008you, buckland2008estimating}. In these cases, only relative measures of local abundance can be calculated, and not absolute densities. This means that comparison of populations between species and sites is problematic without assuming equal detectability \citep{schmidt2003count, hayes2000, walters2013challenges}. Equal detectability is unlikely because of differences in environmental conditions, sensor type, habitat, species biology. 
+Acoustic data suffers from many of the problems associated with data from camera trap surveys in that individuals are often unmarked so capture-mark-recapture methods cannot be used to estimate densities. In some cases the distance between the animal and the sensor is known, for example when an array of sensors and the position of the animal is estimated by triangulation \citep{lewis2007sperm}. In these situations distance-sampling methods can be applied, a method typically used for marine mammals \citep{rogers2013density}. However, in many cases distance estimation is not possible, for example when single sensors are deployed, a situation typical in the majority of terrestrial acoustic surveys  \citep{elphick2008you, buckland2008estimating}. In these cases, only relative measures of local abundance can be calculated, and not absolute densities. This means that comparison of populations between species and sites is problematic without assuming equal detectability \citep{schmidt2003count, hayes2000assumptions, walters2013challenges}. Equal detectability is unlikely because of differences in environmental conditions, sensor type, habitat, species biology. 
 
 In this study we create a generalised REM (gREM), as an extension to the camera trap model of \citep{rowcliffe2008estimating}, to estimate absolute density from count data from acoustic detectors, or camera traps, where the sensor width can vary from 0 to $2\pi$ radians, and the signal given from the animal can be directional. We assessed the accuracy and precision of the gREM within a simulated environment, by varying the sensor detection widths, animal signal widths, number of captures and models of animal movement. We use the simulation results to recommend best survey practice for estimating animal densities from remote sensors. 
 
