--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,33 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-09-17 11:01:00 +0100 
+%% Created for Elizabeth Moorcroft at 2014-09-17 14:08:22 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{hayes2000assumptions,
+	Author = {Hayes, John P},
+	Date-Added = {2014-09-17 13:06:17 +0000},
+	Date-Modified = {2014-09-17 13:06:17 +0000},
+	Journal = {Acta Chiropterologica},
+	Number = {2},
+	Pages = {225--236},
+	Publisher = {Polish Academy of Sciences},
+	Title = {Assumptions and practical considerations in the design and interpretation of echolocation-monitoring studies},
+	Volume = {2},
+	Year = {2000}}
+
+@article{borchers2014continuous,
+	Author = {Borchers, David and Distiller, Greg and Foster, Rebecca and Harmsen, Bart and Milazzo, Lorenzo},
+	Date-Added = {2014-09-17 13:05:13 +0000},
+	Date-Modified = {2014-09-17 13:05:13 +0000},
+	Journal = {Methods in Ecology and Evolution},
+	Publisher = {Wiley Online Library},
+	Title = {Continuous-time spatially explicit capture--recapture models, with an application to a jaguar camera-trap survey},
+	Year = {2014}}
 
 @article{sollmann2013using,
 	Author = {Sollmann, Rahel and Gardner, Beth and Chandler, Richard B and Shindle, David B and Onorato, David P and Royle, Jeffrey Andrew and O'Connell, Allan F},
